[package]

name = "stealthy"
version = "0.0.1"
authors = ["unknown"]
build = "build.rs"

[dependencies]
rand = "0.6.1"
libc = "0.2.45"
time = "0.1.41"
getopts = "0.2.18"
term = "0.5.1"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.24"
dirs = "1.0.4"

[dependencies.ncurses]
git = "https://github.com/jeaye/ncurses-rs.git"
rev = "162839bd621377781d274237637a0389ca9784f2"

[features]
default = ["usencurses"]
usencurses = []
